--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tsx": "^4.19.2"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1"
   }
